Fix overflow on groups

--- a/kanception/src/features/kanban/kanban.css
+++ b/kanception/src/features/kanban/kanban.css
@@ -98,6 +98,7 @@
 
 .rbd-droppable-context {
   min-height: 40px;
+  overflow-x: hidden;
 }
 
 @media screen and (max-width: 768px) {
